<resources>
    <string name="app_name">Online Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_notification">Notification</string>
    <string name="action_cart">Cart</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">My Orders</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_login">Login</string>


    <string name="menu_about">About</string>
    <string name="menu_policy">Privacy &amp; Policy</string>
    <string name="menu_terms">Terms &amp; Conditions</string>
    <string name="lets_get_started">Lets get started</string>
    <string name="welcome_to_online_store">Welcome to Online Store</string>
    <string name="todo">TODO</string>
    <string name="we_are_happy_to_have_you_get_ready_to_buy_fresh_fruits_groceries_and_anything_you_want">We are Happy To Have You,Get Ready to buy Fresh Fruits Groceries and anything you want.</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>

    <!--    Login Part-->
    <string name="username">Username</string>
    <string name="email">Email</string>

    <string name="password">password</string>
    <string name="Password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="google_places_api_key" />


</resources>