<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item-->
<!--        android:id="@+id/action_settings"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/action_settings"-->
<!--        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/searchicon"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_notification"
        android:orderInCategory="100"
        android:title="@string/action_notification"
        android:icon="@drawable/ic_notification"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cart"
        android:orderInCategory="100"
        android:title="@string/action_cart"
        android:icon="@drawable/ic_cart"
        app:showAsAction="always" />
</menu>